--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "@segment/analytics.js-integration",
+  "name": "@segment/analytics.js-integration-scratch-it",
   "version": "3.2.0",
-  "description": "Base factory for analytics.js integrations",
+  "description": "Scratch-it integration for analytics.js",
   "keywords": [
     "analytics.js",
-    "segment"
+    "segment",
+    "scratch-it",
+    "zembula"
   ],
   "main": "lib/index.js",
   "scripts": {
@@ -12,14 +14,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/segmentio/analytics.js-integration"
+    "url": "https://github.com/Scratch-it/analytics.js-integration-scratch-it"
   },
-  "author": "Segment <friends@segment.com>",
+  "author": "Carl Thorner <carl@zembula.com>",
   "license": "SEE LICENSE IN LICENSE",
   "bugs": {
-    "url": "https://github.com/segmentio/analytics.js-integration/issues"
+    "url": "https://github.com/Scratch-it/analytics.js-integration-scratch-it/issues"
   },
-  "homepage": "https://github.com/segmentio/analytics.js-integration#readme",
+  "homepage": "https://github.com/Scratch-it/analytics.js-integration-scratch-it#readme",
   "dependencies": {
     "@ndhoule/after": "^1.0.0",
     "@ndhoule/clone": "^1.0.0",
@@ -37,6 +39,7 @@
     "debug": "^2.2.0",
     "domify": "^1.4.0",
     "is": "^3.1.0",
+    "obj-case": "^0.2.0",
     "load-iframe": "^1.0.0",
     "next-tick": "^0.2.2",
     "slug-component": "^1.1.0",
