add es-lint config

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@segment/analytics.js-core": "^3.0.0",
     "@segment/analytics.js-integration-tester": "^3.0.0",
     "@segment/clear-env": "^2.0.0",
+    "@segment/eslint-config": "^3.1.1",
     "@ndhoule/after": "^1.0.0",
     "@ndhoule/clone": "^1.0.0",
     "@ndhoule/defaults": "^2.0.1",
