--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
   },
   "homepage": "https://github.com/Scratch-it/analytics.js-integration-scratch-it#readme",
   "dependencies": {
-    "@segment/analytics.js-core": "^3.0.0",
-    "@segment/analytics.js-integration-tester": "^3.0.0",
+    "@segment/analytics.js-integration": "^3.1.0",
     "@segment/clear-env": "^2.0.0",
-    "@segment/eslint-config": "^3.1.1",
     "@ndhoule/after": "^1.0.0",
     "@ndhoule/clone": "^1.0.0",
     "@ndhoule/defaults": "^2.0.1",
@@ -50,6 +48,8 @@
     "to-no-case": "^0.1.3"
   },
   "devDependencies": {
+    "@segment/analytics.js-core": "^3.0.0",
+    "@segment/analytics.js-integration-tester": "^3.0.0",
     "@segment/eslint-config": "^3.1.1",
     "browserify": "^13.0.0",
     "browserify-istanbul": "^2.0.0",
